some corrections in package.json and .gitignore

--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "name": "clipPathPolygon",
   "url": "https://github.com/andrusieczko/jquery-clippath-polygon",
   "description": "jQuery plugin that makes easy to use clip-path on whatever tag under different browsers",
-  "version": "0.9",
+  "version": "0.1.0",
   "devDependencies": {
-    "grunt-contrib-jshint": "~0.6.3",
-    "grunt-contrib-uglify": "~0.2.2",
+    "grunt-contrib-jshint": "",
+    "grunt-contrib-uglify": "",
     "mocha": "",
     "sinon": "",
     "expect.js": "",
-    "jquery": ""
+    "jquery": "",
+    "grunt": ""
   }
 }
