--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "author": "Karol Andrusieczko",
   "license": "MIT",
   "name": "clip-path-polygon",
-  "main": "js/clipPathPolygon",
-  "url": "https://github.com/andrusieczko/jquery-clippath-polygon",
+  "main": "js/clip-path-polygon",
+  "url": "https://github.com/andrusieczko/clip-path-polygon",
   "description": "jQuery plugin that makes easy to use clip-path on whatever tag under different browsers",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "repository": {
     "type": "git",
-    "url": "git://github.com/andrusieczko/clipPathPolygon.git"
+    "url": "git://github.com/andrusieczko/clip-path-polygon.git"
   },
   "dependencies": {
     "jquery": "~1.8.3"
@@ -16,10 +16,8 @@
   "devDependencies": {
     "grunt-contrib-jshint": "",
     "grunt-contrib-uglify": "",
-    "mocha": "",
-    "sinon": "",
-    "expect.js": "",
-    "jquery": "",
-    "grunt": ""
+    "mocha": "~1.12.0",
+    "sinon": "~1.7.3",
+    "expect.js": "0.2.0"
   }
 }
