--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt-contrib-uglify": "",
     "mocha": "~1.12.0",
     "sinon": "~1.7.3",
-    "expect.js": "0.2.0"
+    "expect.js": "0.2.0",
+    "grunt-shell": "~0.6.1"
   }
 }
